# RemoveFromFile

./: CMakeLists.txt  FileHandler.cpp  FileHandler.h  Readme.md  Test.txt  Test2.txt  main.cpp
.github/workflows/: release.yml
data/: Test.txt  Test2.txt  Test3.txt
